test/valid/59843_var_chain/var_chain.mag
-- Author: 59843, Miguel Castelo

fun f (_) : Unit -> Int =
  var z : Int = 10;
  var y : Int = z;
  var x : Int = y;
  x

fun main (_) : Unit -> Unit =
  print(f(unit))
